--- a/src/styles/eyes.scss
+++ b/src/styles/eyes.scss
@@ -4,41 +4,50 @@
 
 .eyes {
   right: 20px;
-  top: -40px;
-  rotate: 24deg;
+  top: -58px;
+  rotate: 26deg;
+  @media screen and (min-width: $break--tblt) {
+    right: 30px;
+    top: calc(-110px + (-150 - -110) * ((100vw - 768px) / (2000 - 768)));
+  }
 
   .eye {
     position: absolute;
-    height: 35px;
-    width: 35px;
     background-color: white;
-    border: 3px solid $blue;
     border-radius: 50%;
     overflow: hidden;
     -webkit-mask-image: -webkit-radial-gradient(white, black); /* fix for safari overflow:hidden and border radius */
-    // @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
-    //   height: calc(20px + (40 - 20) * ((100vw - 200px) / (350 - 200)));
-    //   width: calc(20px + (40 - 20) * ((100vw - 200px) / (350 - 200)));
-    // }
+    width: 40px;
+    height: 40px;
+    border: 5px solid $blue;
+    @media screen and (min-width: $break--tblt){
+      border: 6px solid $blue;
+      margin-top: 20px;
+      height: calc(60px + (100 - 60) * ((100vw - 768px) / (2000 - 768)));
+      width: calc(60px + (100 - 60) * ((100vw - 768px) / (2000 - 768)));
+    }
   }
   
   .eye--left {
-    left: 25px;
+    left: 38px;
+    @media screen and (min-width: $break--tblt) {
+      left: calc(45px + (80 - 45) * ((100vw - 768px) / (2000 - 768)));
+    }
   }
   
   .pupil {
-    width: 15px;
-    height: 15px;
+    width: 18px;
+    height: 18px;
     background-color: $blue;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate3d(-50%, -50%, 0);
     border-radius: 50%;
-    //@media screen and (min-width: 351px) and (max-width: $break--tblt) {
-    //   height: calc(15px + (25 - 15) * ((100vw - 351px) / (768 - 351)));
-    //   width: calc(15px + (25 - 15) * ((100vw - 351px) / (768 - 351)));
-    // }
+    @media screen and (min-width: $break--tblt) {
+      height: calc(23px + (40 - 23) * ((100vw - 768px) / (2000 - 768)));
+      width: calc(23px + (40 - 23) * ((100vw - 768px) / (2000 - 768)));
+    }
   }
   
   .pupil:after {
@@ -50,87 +59,12 @@
     top: 5px;
     right: 2px;
     background-color: white;
+    @media screen and (min-width: $break--tblt) {
+      height: calc(5px + (13 - 5) * ((100vw - 768px) / (2000 - 768)));
+      width: calc(5px + (13 - 5) * ((100vw - 768px) / (2000 - 768)));
+      top: 5px;
+      right: 10px;
+    }
   }
 
-  // .eye {
-  //   transition: height 0.5s ease, width 0.5s ease;
-  //   border-radius: 50%;
-  //   overflow: hidden;
-  //   position: relative;
-  //   @media screen and (min-width: $break--min) and (max-width: $break--mbl--sm) {
-  //     border: 3px solid $blue;
-  //     height: calc(20px + (40 - 20) * ((100vw - 200px) / (350 - 200)));
-  //     width: calc(20px + (40 - 20) * ((100vw - 200px) / (350 - 200)));
-  //   }
-  //   @media screen and (min-width: $break--mbl--sm) and (max-width: $break--tblt){
-  //     border: 5px solid $blue;
-  //     height: calc(40px + (60 - 40) * ((100vw - 350px) / (768 - 350)));
-  //     width: calc(40px + (60 - 40) * ((100vw - 350px) / (768 - 350)));
-  //   }
-  //   @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-  //     border: 7px solid $blue;
-  //     height: calc(60px + (100 - 60) * ((100vw - 768px) / (1440 - 768)));
-  //     width: calc(60px + (100 - 60) * ((100vw - 768px) / (1440 - 768)));
-  //   }
-  //   @media screen and (min-width: $break--dsktp--lg){
-  //     border: 9px solid $blue;
-  //     height: calc(100px + (150 - 100) * ((100vw - 1440px) / (2000 - 1440)));
-  //     width: calc(100px + (150 - 100) * ((100vw - 1440px) / (2000 - 1440)));
-  //   }
-
-  //   .pupil {
-  //     background-color: $blue;
-  //     border-radius: 50%;
-  //     position: absolute;
-  //     left: 50%;
-  //     top: 50%;
-  //     @media screen and (min-width: 351px) and (max-width: $break--tblt) {
-  //       margin-left: calc((-10px) + ((-12) - (-10)) * ((100vw - 351px) / (768 - 351)));
-  //       margin-top: calc((-8px) + ((-13) - (-8)) * ((100vw - 351px) / (768 - 351)));
-  //       height: calc(15px + (25 - 15) * ((100vw - 351px) / (768 - 351)));
-  //       width: calc(15px + (25 - 15) * ((100vw - 351px) / (768 - 351)));
-  //     }
-  //     @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-  //       margin-left: calc((-12px) + ((-24) - (-12)) * ((100vw - 768px) / (1440 - 768)));
-  //       margin-top: calc((-13px) + ((-24) - (-13)) * ((100vw - 768px) / (1440 - 768)));
-  //       height: calc(25px + (50 - 25) * ((100vw - 768px) / (1440 - 768)));
-  //       width: calc(25px + (50 - 25) * ((100vw - 768px) / (1440 - 768)));
-  //     }
-  //     @media screen and (min-width: $break--dsktp--lg){
-  //       margin-left: calc((-24px) + ((-40) - (-24)) * ((100vw - 1440px) / (2000 - 1440)));
-  //       margin-top: calc((-24px) + ((-40) - (-24)) * ((100vw - 1440px) / (2000 - 1440)));
-  //       height: calc(50px + (80 - 50) * ((100vw - 1440px) / (2000 - 1440)));
-  //       width: calc(50px + (80 - 50) * ((100vw - 1440px) / (2000 - 1440)));
-  //     }
-      
-  //     &::after {
-  //         content: "";
-  //         background: white;
-  //         border-radius: 50%;
-  //         position: absolute;
-  //         height: 10px;
-  //         width: 10px;
-  //         top: 10px;
-  //         right: 10px;
-  //       @media screen and (min-width: 351px) and (max-width: $break--tblt) {
-  //         height: calc(5px + (10 - 5) * ((100vw - 351px) / (768 - 351)));
-  //         width: calc(5px + (10 - 5) * ((100vw - 351px) / (768 - 351)));
-  //         top: calc(3px + (6 - 3) * ((100vw - 351px) / (768 - 351)));
-  //         right: calc(3px + (6 - 3) * ((100vw - 351px) / (768 - 351)));
-  //       }
-  //       @media screen and (min-width: $break--tblt) and (max-width: $break--dsktp--lg){
-  //         height: calc(10px + (12 - 10) * ((100vw - 768px) / (1440 - 768)));
-  //         width: calc(10px + (12 - 10) * ((100vw - 768px) / (1440 - 768)));
-  //         top: calc(6px + (8 - 6) *  ((100vw - 768px) / (1440 - 768)));
-  //         right: calc(6px + (8 - 6) * ((100vw - 768px) / (1440 - 768)));
-  //       }
-  //       @media screen and (min-width: $break--dsktp--lg){
-  //         height: calc(12px + (24 - 12) * ((100vw - 1440px) / (2000 - 1440)));
-  //         width: calc(12px + (24 - 12) * ((100vw - 1440px) / (2000 - 1440)));
-  //         top: calc(6px + (16 - 6) * ((100vw - 1440px) / (2000 - 1440)));
-  //         right: calc(6px + (16 - 6) * ((100vw - 1440px) / (2000 - 1440)));
-  //       }
-  //     }
-  //   }
-  // }
 }
